# stateshaper

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  EASY_USE.md  QUICK_START.md  README.md  a.bat  cli.bat  connector.bat  d.bat  demo.bat  main.py  pyproject.toml  requirements.txt  run.bat  setup.py  streamlit_app.py  test.bat  vercel.json
.vercel/: project.json
.vercel/python/: vc_init_dev_asgi.py
api/: API.md  connector.py  run_api.py
classes/connector/: Connector.py
docs/: math_details.md  mse_cli.md
example_data/: EXAMPLE_DATA.md  compound.json  random.json  rating.json  rating_derived.json  tokens.json
example_data/format_data/: FORMAT_DATA.md  FormatData.py
frontend/ads_frontend/: package-lock.json  package.json
frontend/fintech_frontend/: package-lock.json
frontend/lessons_demo/: README.md  package-lock.json  package.json  todo.txt
frontend/ml_frontend/: package-lock.json  package.json
frontend/qa_frontend/: package.json
modules/advertising/: AdLinks.py  Advertising.py  MappingRules.py
modules/advertising/classes/: AdLinks.py  MappingRules.py
modules/databases/: Statistics.py  TableData.py
modules/databases/examples/: DynamoDB.py  Firebase.py  MSE.py  MongoDB.py  MySQL.py
modules/personalization/: Personalization.py
modules/personalization/examples/: Fitness.py
modules/personalization/selections/: Fitness.py
modules/programming/: Code.py
src/main/: __init__.py  connector.py  core.py  d.py  demo.py  run.py  stateshaper.py
src/main/debug/: Print.py
src/mse/: __init__.py  core.py  demo.py  morph_rules.py  run.py
(+98 files in other folders)
