[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateshaper"            
version = "0.1.0"
description = "Create infinite, deterministic streams of data from a small seed."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Jason G. Dunn"}]
dependencies = [
  # "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/jgddesigns/stateshaper"
Issues = "https://github.com/jgddesigns/stateshaper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
