[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateshaper"            
version = "1.0.1"
description = "Create a memorized array of unlimited numbers from a small seed. The output can be tokenized and used in code to derive values. Useful for synthetic data, personalization, world building and more."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Jason G. Dunn"}]
dependencies = [
  # "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/jgddesigns/stateshaper"
Issues = "https://github.com/jgddesigns/stateshaper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
